--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -53,11 +53,27 @@
   }
 
   .form-control input {
-    @apply border border-border bg-transparent w-full text-sm;
+    @apply border border-border bg-white w-full text-sm;
+  }
+  
+    /* Default Size (MD) */
+  .form-control-md input,
+  .form-control input { /* ตั้งให้ .form-control เป็นขนาดกลาง (md) โดยปริยาย */
+    @apply text-sm px-4 py-2;
   }
 
+  /* Small Size (SM) */
+  .form-control-sm input {
+    @apply text-xs px-3 py-1.5;
+  }
+
+  /* Large Size (LG) */
+  .form-control-lg input {
+    @apply text-base px-5 py-3;
+  }
+  
   .form-control-rounded input {
-    @apply rounded-full border border-border bg-transparent w-full text-sm;
+    @apply rounded-full border border-border bg-white w-full text-sm;
   }
 
   .form-control-rounded input:focus {
@@ -70,7 +86,7 @@
   }
 
   .form-control-input {
-    @apply rounded-md border border-border bg-transparent w-full text-sm;
+    @apply rounded-md border border-border bg-white w-full text-sm;
   }
 
   .form-control-input:focus {
@@ -78,7 +94,7 @@
   }
 
   .form-rounded-md input {
-    @apply rounded-md border border-border bg-transparent w-full text-sm;
+    @apply rounded-md border border-border bg-white w-full text-sm;
   }
 
   .form-rounded-md input:focus {
@@ -102,15 +118,15 @@
   }
 
   .select-md select {
-    @apply border-ld bg-transparent w-full text-sm rounded-md focus:border-primary focus:ring-0;
+    @apply border-ld bg-white w-full text-sm rounded-md focus:border-primary focus:ring-0;
   }
 
   .select-rounded select {
-    @apply border-ld bg-transparent w-full text-sm rounded-xl focus:border-primary focus:ring-0;
+    @apply border-ld bg-white w-full text-sm rounded-xl focus:border-primary focus:ring-0;
   }
 
   .checkbox {
-    @apply h-[18px] w-[18px] border border-border bg-transparent focus:ring-0 focus:ring-offset-0
+    @apply h-[18px] w-[18px] border border-border bg-white focus:ring-0 focus:ring-offset-0
   }
 
   .has-error input {
