--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -7,6 +7,7 @@
 @import './layouts/panel.css';
 @import './theme/default-colors.css';
 @import './override/reboot.css';
+@import './custom/button.css';
 
 
 @layer components {
