--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -9,6 +9,7 @@
 @import './override/reboot.css';
 @import './custom/button.css';
 @import './custom/table.css';
+@import './custom/form.css';
 
 
 @layer components {
@@ -51,62 +52,7 @@
     @apply border-border;
   }
 
-  .form-rounded-xl input {
-    @apply rounded-xl;
-  }
 
-  .form-control input {
-    @apply border border-border bg-white w-full text-sm;
-  }
-  
-    /* Default Size (MD) */
-  .form-control-md input,
-  .form-control input { /* ตั้งให้ .form-control เป็นขนาดกลาง (md) โดยปริยาย */
-    @apply text-sm px-4 py-2;
-  }
-
-  /* Small Size (SM) */
-  .form-control-sm input {
-    @apply text-xs px-3 py-1.5;
-  }
-
-  /* Large Size (LG) */
-  .form-control-lg input {
-    @apply text-base px-5 py-3;
-  }
-  
-  .form-control-rounded input {
-    @apply rounded-full border border-border bg-white w-full text-sm;
-  }
-
-  .form-control-rounded input:focus {
-    @apply border-primary outline-none shadow-none ring-offset-0 ring-transparent;
-  }
-
-
-  .form-control input:focus {
-    @apply border-primary outline-none shadow-none ring-offset-0 ring-transparent;
-  }
-
-  .form-control-input {
-    @apply rounded-md border border-border bg-white w-full text-sm;
-  }
-
-  .form-control-input:focus {
-    @apply border-primary outline-none shadow-none ring-offset-0 ring-transparent;
-  }
-
-  .form-rounded-md input {
-    @apply rounded-md border border-border bg-white w-full text-sm;
-  }
-
-  .form-rounded-md input:focus {
-    @apply border-primary outline-none shadow-none ring-offset-0 ring-transparent;
-  }
-
-  .form-rounded input {
-    @apply rounded-full
-  }
 
   .elipse {
     @apply w-[18px] h-[10px]
@@ -117,7 +63,7 @@
   }
 
   .select-option select {
-    @apply bg-muted border-0 text-darklink d py-2 ps-4 pe-9 w-auto focus:border-0 focus:ring-0 font-medium;
+    @apply bg-muted border-0 text-darklink py-2 ps-4 pe-9 w-auto focus:border-0 focus:ring-0 font-medium;
   }
 
   .select-md select {
@@ -128,12 +74,14 @@
     @apply border-ld bg-white w-full text-sm rounded-xl focus:border-primary focus:ring-0;
   }
 
+  .select-rounded-xl select {
+    @apply rounded-xl;
+  }
+
   .checkbox {
     @apply h-[18px] w-[18px] border border-border bg-white focus:ring-0 focus:ring-offset-0
   }
 
-  .has-error input {
-    @apply border-red-500 text-red-900 focus:border-red-500 focus:ring-red-500
-  }
+
 }
 
